# web_crawler_practice

./: README.md  base_crawler.py  pyproject.toml
